syntax = "proto3";

package envoy.extensions.matching.input.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";

option java_package = "io.envoyproxy.envoy.extensions.matching.input.v3";
option java_outer_classname = "HttpInputProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

message HttpRequestHeaderInput {
  string header = 1;
}

message HttpResponseHeaderInput {
  string header = 1;
}
